@@ -1,6 +1,7 @@
 pil
-python-*sql
+python-*sql (optional when using sqlite)
 python-twitter (optional)
+BeautifulSoup (optional when using colorizing)
 
 -- TEMPORARY --
 
