@@ -165,3 +165,6 @@ ALLOW_ANONYMOUS_COMMENTS = True
 TWITTER_USERNAME = ""
 TWITTER_PASSWORD = ""
 TWITTER_LIMIT = 5
+
+# colorize the code in entries
+COLORIZE_CODE = True
